--- a/index.html
+++ b/index.html
@@ -36,6 +36,32 @@
         <button><a href="index.html">HAZ EL TEST DE SEGURIDAD</a></button>
 
     </section>
+
+    <section id="info">
+
+        <div class="infoContainer">
+            <h2>¿Por qué es importante la ciberseguridad?</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mollis quam quam, non mattis quam congue ut. Cras id varius felis. 
+                Quisque efficitur augue magna. In molestie, tortor nec fringilla consequat, velit nulla tempus est, ac elementum augue leo at sapien. 
+                Maecenas neque justo, blandit eu neque et, dictum ultricies leo. Suspendisse porta id enim a iaculis. In hac habitasse platea dictumst. 
+                Nam posuere posuere pharetra. Maecenas eu rhoncus mauris, at vestibulum odio. Nunc gravida nibh id nisi egestas finibus. Sed bibendum, 
+                dolor sed varius posuere, dolor sem pretium augue, sit amet mollis turpis dui suscipit tellus. Praesent vitae sodales dui, eget rhoncus tellus. 
+                Sed quis lorem in elit sollicitudin tempor ac id nulla. Nam id sapien non dui malesuada aliquet vel sed ipsum.</p>
+        </div>
+
+        <div class="separator"></div>
+
+        <div class="infoContainer">
+            <h2>Consejos básicos para la ciberseguridad</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mollis quam quam, non mattis quam congue ut. Cras id varius felis. 
+                Quisque efficitur augue magna. In molestie, tortor nec fringilla consequat, velit nulla tempus est, ac elementum augue leo at sapien. 
+                Maecenas neque justo, blandit eu neque et, dictum ultricies leo. Suspendisse porta id enim a iaculis. In hac habitasse platea dictumst. 
+                Nam posuere posuere pharetra. Maecenas eu rhoncus mauris, at vestibulum odio. Nunc gravida nibh id nisi egestas finibus. Sed bibendum, 
+                dolor sed varius posuere, dolor sem pretium augue, sit amet mollis turpis dui suscipit tellus. Praesent vitae sodales dui, eget rhoncus tellus. 
+                Sed quis lorem in elit sollicitudin tempor ac id nulla. Nam id sapien non dui malesuada aliquet vel sed ipsum.</p>
+        </div>
+
+    </section>
     
 </body>
 </html>
