--- a/index.html
+++ b/index.html
@@ -62,6 +62,22 @@
         </div>
 
     </section>
+
+    <footer>
+
+        <p>© 2025 ESCUDO DIGITAL</p>
+        <p><a href="https://www.incibe.es/" target="_blank">INCIBE</a> | <a href="https://owasp.org/www-project-top-ten/" target="_blank">OWASP</a></p>
+
+        <div class="socialIcons">
+            <a href="https://www.linkedin.com/in/verosampedro/" target="_blank">
+                <img src="assets/img/linkedin.svg" alt="LinkedIn">
+            </a>
+            <a href="https://github.com/veronicasg85" target="_blank">
+                <img src="assets/img/github.svg" alt="GitHub">
+            </a>
+        </div>
+
+    </footer>
     
 </body>
 </html>
