retoques home page

--- a/index.html
+++ b/index.html
@@ -41,24 +41,46 @@
 
         <div class="infoContainer">
             <h2>¿Por qué es importante la ciberseguridad?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mollis quam quam, non mattis quam congue ut. Cras id varius felis. 
-                Quisque efficitur augue magna. In molestie, tortor nec fringilla consequat, velit nulla tempus est, ac elementum augue leo at sapien. 
-                Maecenas neque justo, blandit eu neque et, dictum ultricies leo. Suspendisse porta id enim a iaculis. In hac habitasse platea dictumst. 
-                Nam posuere posuere pharetra. Maecenas eu rhoncus mauris, at vestibulum odio. Nunc gravida nibh id nisi egestas finibus. Sed bibendum, 
-                dolor sed varius posuere, dolor sem pretium augue, sit amet mollis turpis dui suscipit tellus. Praesent vitae sodales dui, eget rhoncus tellus. 
-                Sed quis lorem in elit sollicitudin tempor ac id nulla. Nam id sapien non dui malesuada aliquet vel sed ipsum.</p>
+            <p>La ciberseguridad es fundamental en el mundo actual, donde gran parte de nuestras actividades diarias, 
+                desde compras en línea hasta el manejo de información personal y profesional, se realizan a través de plataformas digitales. 
+                Al estar tan conectados, nuestros datos y sistemas están en constante riesgo de ser atacados por ciberdelincuentes que buscan robar información sensible, 
+                como contraseñas, números de tarjetas o incluso datos privados de empresas. Un ataque exitoso puede tener consecuencias graves, desde fraudes financieros 
+                hasta la interrupción de servicios esenciales, lo que hace que proteger nuestros dispositivos y redes sea crucial. 
+                <br>
+                <br>
+                Además, la ciberseguridad es esencial para la estabilidad de las empresas y las infraestructuras críticas, como hospitales, bancos y redes eléctricas. 
+                Los ataques cibernéticos pueden poner en peligro tanto la operación de una empresa como la seguridad de la información de sus empleados y clientes. 
+                Al mismo tiempo, los servicios esenciales, que dependen de sistemas digitales para funcionar, pueden verse paralizados si no están adecuadamente protegidos. 
+                Por todo esto, la ciberseguridad no solo protege datos, sino que también contribuye a mantener la confianza en los servicios digitales y a garantizar el buen funcionamiento de la sociedad moderna.
+                <br>
+                <br>
+                La ciberseguridad, además de ser una necesidad tecnológica, también juega un papel fundamental en la protección de nuestra privacidad y derechos digitales. 
+                A medida que las amenazas evolucionan, la capacitación y la concienciación de los usuarios se vuelven esenciales para evitar caer en trampas como el phishing o 
+                el malware. Es crucial que tanto individuos como organizaciones mantengan una postura proactiva en cuanto a las medidas de seguridad, como el uso de contraseñas 
+                fuertes, actualizaciones periódicas de software y el uso de herramientas de protección avanzadas.</p>
         </div>
 
         <div class="separator"></div>
 
         <div class="infoContainer">
             <h2>Consejos básicos para la ciberseguridad</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mollis quam quam, non mattis quam congue ut. Cras id varius felis. 
-                Quisque efficitur augue magna. In molestie, tortor nec fringilla consequat, velit nulla tempus est, ac elementum augue leo at sapien. 
-                Maecenas neque justo, blandit eu neque et, dictum ultricies leo. Suspendisse porta id enim a iaculis. In hac habitasse platea dictumst. 
-                Nam posuere posuere pharetra. Maecenas eu rhoncus mauris, at vestibulum odio. Nunc gravida nibh id nisi egestas finibus. Sed bibendum, 
-                dolor sed varius posuere, dolor sem pretium augue, sit amet mollis turpis dui suscipit tellus. Praesent vitae sodales dui, eget rhoncus tellus. 
-                Sed quis lorem in elit sollicitudin tempor ac id nulla. Nam id sapien non dui malesuada aliquet vel sed ipsum.</p>
+            <p>Uno de los consejos más importantes para mantener una buena ciberseguridad es el uso de contraseñas fuertes y únicas. 
+                Muchas personas cometen el error de usar contraseñas simples o repetirlas en varios sitios, lo que las hace vulnerables a los ataques. 
+                Es recomendable utilizar una combinación de letras, números y símbolos, y evitar palabras fáciles de adivinar, como nombres o fechas de nacimiento. 
+                Además, el uso de un gestor de contraseñas puede ayudarte a almacenar de forma segura todas tus credenciales, evitando tener que recordarlas todas, 
+                y garantizando que no repitas contraseñas en diferentes cuentas.
+            <br>
+            <br>
+            Otro aspecto crucial es mantener todos los dispositivos y software actualizados. Los fabricantes suelen lanzar actualizaciones periódicas para corregir fallos de 
+            seguridad que podrían ser explotados por ciberdelincuentes. Si no actualizas tu sistema operativo, aplicaciones o antivirus, dejas abiertas puertas para que los 
+            atacantes aprovechen vulnerabilidades conocidas. Configurar actualizaciones automáticas es una buena práctica para asegurarte de que siempre tengas las últimas 
+            mejoras de seguridad sin tener que estar pendiente de ello manualmente.
+            <br>
+            <br>
+            Finalmente, tener precaución al navegar por internet es esencial. Evita hacer clic en enlaces sospechosos o abrir correos electrónicos de fuentes no verificadas, 
+            ya que estos pueden ser intentos de phishing para robarte información personal o infectar tu dispositivo con malware. También es importante utilizar redes Wi-Fi 
+            seguras, especialmente cuando accedes a información sensible, como hacer compras en línea o acceder a cuentas bancarias. Si estás en una red pública, 
+            considera usar una red privada virtual (VPN) para cifrar tu conexión y proteger tu privacidad.</p>
         </div>
 
     </section>
