--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escudo Digital</title>
-    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
@@ -20,7 +19,7 @@
 
             <ul>
                 <li class="pages"><a href="index.html">INICIO</a></li>
-                <li class="pages"><a href="index.html">INFORMACIÓN</a></li>
+                <li class="pages"><a href="pages/info.html">INFORMACIÓN</a></li>
                 <li class="pages"><a href="index.html">TEST</a></li>
                 <li class="pages"><a href="index.html">CONTACTO</a></li>
             </ul>
