--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <header>
 
         <div id="headerLogo">
-            <img class="logo" src="assets/img/logo.svg" alt="">
+            <img class="logo" src="../assets/img/logo.svg" alt="">
             <h2>ESCUDO DIGITAL</h2>
         </div>
 
         <div id="headerText">
 
             <ul>
-                <li class="pages"><a href="index.html">INICIO</a></li>
+                <li class="pages"><a href="../index.html">INICIO</a></li>
                 <li class="pages"><a href="pages/info.html">INFORMACIÓN</a></li>
                 <li class="pages"><a href="index.html">TEST</a></li>
                 <li class="pages"><a href="index.html">CONTACTO</a></li>
@@ -91,10 +91,10 @@
 
         <div class="socialIcons">
             <a href="https://www.linkedin.com/in/verosampedro/" target="_blank">
-                <img src="assets/img/linkedin.svg" alt="LinkedIn">
+                <img src="../assets/img/linkedin.svg" alt="LinkedIn">
             </a>
             <a href="https://github.com/veronicasg85" target="_blank">
-                <img src="assets/img/github.svg" alt="GitHub">
+                <img src="../assets/img/github.svg" alt="GitHub">
             </a>
         </div>
 
