--- a/pages/info.html
+++ b/pages/info.html
@@ -100,8 +100,8 @@
                         <p>(pulsa para ver más)</p>
                     </div>
                     <div class="back">
-                        <h3>Detalles sobre Protección Personal</h3>
-                        <p>Aquí podrás encontrar más detalles acerca de cómo proteger tu información personal...</p>
+                        <h3>Detalles sobre la Noticia 1</h3>
+                        <p>Aquí podrás encontrar más detalles acerca de la Noticia 1...</p>
                     </div>
                 </div>
             </div>
@@ -114,8 +114,8 @@
                         <p>(pulsa para ver más)</p>
                     </div>
                     <div class="back">
-                        <h3>NOTICIA 3</h3>
-                        <p>Aquí podrás encontrar más detalles acerca de las amenazas comunes en ciberseguridad...</p>
+                        <h3>Detalles sobre la Noticia 2</h3>
+                        <p>Aquí podrás encontrar más detalles acerca de la Noticia 2...</p>
                     </div>
                 </div>
             </div>
@@ -128,8 +128,8 @@
                         <p>(pulsa para ver más)</p>
                     </div>
                     <div class="back">
-                        <h3>Detalles sobre Seguridad en Dispositivos</h3>
-                        <p>Aquí podrás encontrar más detalles sobre cómo asegurar tus dispositivos...</p>
+                        <h3>Detalles sobre la Noticia 3</h3>
+                        <p>Aquí podrás encontrar más detalles sobre la Noticia 3...</p>
                     </div>
                 </div>
             </div>
@@ -142,8 +142,8 @@
                         <p>(pulsa para ver más)</p>
                     </div>
                     <div class="back">
-                        <h3>Detalles sobre Navegación Segura</h3>
-                        <p>Aquí podrás encontrar más detalles sobre cómo mantener una navegación segura...</p>
+                        <h3>Detalles sobre la Noticia 4</h3>
+                        <p>Aquí podrás encontrar más detalles sobre la Noticia 4...</p>
                     </div>
                 </div>
             </div>
