--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li class="pages"><a href="../index.html">INICIO</a></li>
                 <li class="pages"><a href="pages/info.html">INFORMACIÓN</a></li>
-                <li class="pages"><a href="index.html">TEST</a></li>
+                <li class="pages"><a href="pages/test.html">TEST</a></li>
                 <li class="pages"><a href="index.html">CONTACTO</a></li>
             </ul>
 
@@ -32,7 +32,7 @@
 
         <h1>PROTEGE TU MUNDO DIGITAL CON CONOCIMIENTO</h1>
         <p>Aprende cómo mantenerte seguro en internet y evita caer en ciberataques.</p>
-        <button><a href="index.html">HAZ EL TEST DE SEGURIDAD</a></button>
+        <button><a href="pages/test.html">HAZ EL TEST DE SEGURIDAD</a></button>
 
     </section>
 
