--- a/pages/info.html
+++ b/pages/info.html
@@ -20,7 +20,7 @@
             <ul>
                 <li class="pages"><a href="../index.html">INICIO</a></li>
                 <li class="pages"><a href="pages/info.html">INFORMACIÓN</a></li>
-                <li class="pages"><a href="index.html">TEST</a></li>
+                <li class="pages"><a href="/pages/test.html">TEST</a></li>
                 <li class="pages"><a href="index.html">CONTACTO</a></li>
             </ul>
 
