--- a/pages/test.html
+++ b/pages/test.html
@@ -19,9 +19,9 @@
 
             <ul>
                 <li class="pages"><a href="../index.html">INICIO</a></li>
-                <li class="pages"><a href="pages/info.html">INFORMACIÓN</a></li>
+                <li class="pages"><a href="../pages/info.html">INFORMACIÓN</a></li>
                 <li class="pages"><a href="/pages/test.html">TEST</a></li>
-                <li class="pages"><a href="index.html">CONTACTO</a></li>
+                <li class="pages"><a href="../pages/contact.html">CONTACTO</a></li>
             </ul>
 
         </div>
