--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li class="pages"><a href="../index.html">INICIO</a></li>
                 <li class="pages"><a href="pages/info.html">INFORMACIÓN</a></li>
                 <li class="pages"><a href="pages/test.html">TEST</a></li>
-                <li class="pages"><a href="index.html">CONTACTO</a></li>
+                <li class="pages"><a href="pages/contact.html">CONTACTO</a></li>
             </ul>
 
         </div>
