github pages deploy

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escudo Digital</title>
-    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 <body>
 
     <header>
 
         <div id="headerLogo">
-            <img class="logo" src="../assets/img/logo.svg" alt="">
+            <img class="logo" src="/assets/img/logo.svg" alt="">
             <h2>ESCUDO DIGITAL</h2>
         </div>
 
@@ -91,10 +91,10 @@
 
         <div class="socialIcons">
             <a href="https://www.linkedin.com/in/verosampedro/" target="_blank">
-                <img src="../assets/img/linkedin.svg" alt="LinkedIn">
+                <img src="/assets/img/linkedin.svg" alt="LinkedIn">
             </a>
             <a href="https://github.com/veronicasg85" target="_blank">
-                <img src="../assets/img/github.svg" alt="GitHub">
+                <img src="/assets/img/github.svg" alt="GitHub">
             </a>
         </div>
 
